--- a/package.json
+++ b/package.json
@@ -19,9 +19,13 @@
   },
   "homepage": "https://github.com/viniciusprog777/Nimer-Quizz-BACK#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "celebrate": "^13.0.4",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.2.5",
+    "multer": "^1.4.2",
     "sequelize": "^6.6.2",
     "sequelize-cli": "^6.2.0"
   },
