--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mysql2": "^2.2.5",
     "multer": "^1.4.2",
+    "mysql2": "^2.2.5",
     "sequelize": "^6.6.2",
-    "sequelize-cli": "^6.2.0"
+    "sequelize-cli": "^6.2.0",
+    "socket.io": "^4.1.2",
+    "ws": "^7.4.6"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
